# agentgateway

./: .env.example  Makefile  README-myngl.md  coding-guidelines.md  config-myngl.yaml  docker-compose-myngl.yaml  docker-compose.yaml  guardrails-webhook.yaml  plan-myngl-demo.md  test-bad-request.sh  test-bad-response.sh  test-basic.sh  test-myngl-agent.sh  workbench.md
myngl/: Dockerfile  MCP-ARCHITECTURE.md  README-MCP.md  README.md  agentgateway-config.yaml  app.py  docker-compose.yaml  mcp-config.yaml  plan-myngl-demo.md  pyproject.toml  start-trino-mcp.sh  test-myngl-agent.sh
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/src/lib/: api.ts
